# 4ma-app

./: .env.example  .gitignore  DEVELOPMENT.md  README.md  index.html  install-mac.sh  install-windows.ps1  package.json  vite.config.js
.github/workflows/: build.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  trial.rs
