[package]
name = "fourma"
version = "1.0.0"
description = "4MA — AI agent orchestration desktop app"
authors = ["senderpa"]
edition = "2021"

[lib]
name = "fourma_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
